feat: notification and student profile redesign
